--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="card_color">#FAF9F9</color>
+    <color name="back_ground">#e5e9f0</color>
+    <color name="primary">#81a1c1</color>
+    <color name="primary_dark">#5e81ac</color>
+    <color name="primary_light">#d9e3ec</color>
+    <color name="accent">#4c566a</color>
+    <color name="primary_text">#2e3440</color>
+    <color name="secondary_text">#4c566a</color>
+    <color name="icons">#2e34408c</color>
+    <color name="divider">#2e34401e</color>
+
+    <color name="red">#bf616a</color>
+    <color name="orange">#d08770</color>
+    <color name="yellow">#ebcb8b</color>
+    <color name="green">#a3be8c</color>
+    <color name="pink">#b48ead</color>
+    <color name="nordwhite">#eceff4</color>
 </resources>
