--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -21,32 +21,36 @@
   <GridLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      app:layout_constraintBottom_toTopOf="@+id/btnRetry"
-      app:layout_constraintEnd_toEndOf="parent"
-      android:rowCount="4"
       android:columnCount="2"
+      android:rowCount="4"
+      app:layout_constraintBottom_toTopOf="@+id/textView6"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textView2" >
+      app:layout_constraintTop_toBottomOf="@+id/textView2"
+      app:layout_constraintVertical_bias="1.0">
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="@color/card_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="0"
-        android:layout_column="0"
         android:layout_rowSpan="3"
-        android:layout_gravity="fill"
         android:layout_rowWeight="1"
+        android:layout_column="0"
         android:layout_columnWeight="1"
+        android:layout_gravity="fill"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/card_color"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp">
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:orientation="vertical"
-          android:gravity="center">
+          android:gravity="center"
+          android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView3"
@@ -58,31 +62,33 @@
 
         <TextView
             android:id="@+id/tvScore"
-            android:textSize="60sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="180"
+            android:gravity="center_vertical|center_horizontal"
             android:paddingBottom="25dp"
-            android:gravity="center_vertical|center_horizontal"/>
+            android:text="180"
+            android:textSize="60sp" />
 
       </LinearLayout>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="@color/card_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="0"
-        android:layout_column="1"
-        android:layout_gravity="fill"
         android:layout_rowWeight="1"
+        android:layout_column="1"
         android:layout_columnWeight="1"
+        android:layout_gravity="fill"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/card_color"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp">
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -93,8 +99,8 @@
             style="@style/Header2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="8dp"
+            android:layout_weight="1"
             android:text="@string/correct" />
 
         <TextView
@@ -109,19 +115,20 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="@color/card_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="1"
-        android:layout_column="1"
-        android:layout_gravity="fill"
         android:layout_rowWeight="1"
+        android:layout_column="1"
         android:layout_columnWeight="1"
+        android:layout_gravity="fill"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="5dp"
+        android:backgroundTint="@color/card_color"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp">
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -148,18 +155,20 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:backgroundTint="@color/card_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="2"
-        android:layout_column="1"
-        android:layout_gravity="fill"
         android:layout_rowWeight="1"
+        android:layout_column="1"
         android:layout_columnWeight="1"
+        android:layout_gravity="fill"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/card_color"
         app:cardCornerRadius="10dp"
         app:cardElevation="8dp">
+
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
@@ -206,4 +215,15 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/btnRetry" />
+
+  <TextView
+      android:id="@+id/textView6"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="160dp"
+      android:layout_marginEnd="20dp"
+      android:text="@string/checkans"
+      app:layout_constraintBottom_toTopOf="@+id/btnContinue"
+      app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
