--- a/app/src/main/res/drawable/bordered_button.xml
+++ b/app/src/main/res/drawable/bordered_button.xml
@@ -1,10 +1,23 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle" >
+<?xml version="1.0" encoding="UTF-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle" >
 
-    <stroke
-        android:width="3dp"
-        android:color="@color/primary" />
+            <stroke
+                android:width="6dp"
+                android:color="@color/primary" />
 
-    <corners android:radius="20dp"/>
-</shape>
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
+    <item android:top="0dp" android:left="0dp" android:right="0dp" android:bottom="0dp">
+        <shape android:shape="rectangle" >
+            <stroke
+                android:width="3dp"
+                android:color="@color/back_ground" />
+            <corners android:radius="20dp"/>
+        </shape>
+    </item>
+</layer-list>
+
+
