--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="card_color">#FAF9F9</color>
     <color name="back_ground">#e5e9f0</color>
+    <color name="offline">#E4E2EA</color>
     <color name="primary">#81a1c1</color>
     <color name="primary_dark">#5e81ac</color>
     <color name="primary_light">#d9e3ec</color>
@@ -25,4 +26,5 @@
     <color name="green">#a3be8c</color>
     <color name="pink">#b48ead</color>
     <color name="nordwhite">#eceff4</color>
+
 </resources>
