--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -23,7 +23,7 @@
       android:layout_height="wrap_content"
       android:columnCount="2"
       android:rowCount="4"
-      app:layout_constraintBottom_toTopOf="@+id/textView6"
+      app:layout_constraintBottom_toTopOf="@+id/tvExplain"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -217,7 +217,7 @@
       app:layout_constraintStart_toEndOf="@+id/btnRetry" />
 
   <TextView
-      android:id="@+id/textView6"
+      android:id="@+id/tvExplain"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginBottom="160dp"
