--- a/app/src/main/res/layout/fragment_quiz_select.xml
+++ b/app/src/main/res/layout/fragment_quiz_select.xml
@@ -7,15 +7,14 @@
     android:background="@color/primary"
     tools:context=".fragments.QuizSelectFragment">
 
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/bundle_select"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
